--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -322,7 +322,7 @@
 								<h3 class="pe-xxl-5 md-pb-20">{{ page.blue_banner[0].title }}</h3>
 							</div>
 							<div class="col-lg-6 text-center text-lg-end" data-aos="fade-left">
-								<a href="contact-us.html" class="msg-btn tran3s">{{ page.blue_banner[0].button_text }}</a>
+								<a href="contact.html" class="msg-btn tran3s">{{ page.blue_banner[0].button_text }}</a>
 							</div>
 						</div>
 					</div> <!-- /.bg-wrapper -->
@@ -403,7 +403,7 @@
 								<ul class="order-lg-1 pb-15 d-flex justify-content-center footer-nav style-none">
 <!-- 									<li><a href="faq.html">Privacy &amp; Terms.</a></li>
 									<li><a href="faq.html">FAQ</a></li>
-									<li><a href="contact-us.html">Contact Us</a></li> -->
+									<li><a href="contact.html">Contact Us</a></li> -->
 								</ul>
 								<p class="copyright text-center order-lg-0 pb-15">Copyright @2022</p>
 							</div>
