--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -269,7 +269,7 @@
 											<div class="col-12">
 												<div class="input-group-meta form-group mb-30">
 													<label>Name*</label>
-													<input class ="name" type="text" placeholder="Your name" name="name" required="required" data-error="Name is required.">
+													<input class ="name" type="text" placeholder="Your name" name="name" required="required" data-error="Name is required." required>
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
@@ -277,7 +277,7 @@
 											<div class="col-12">
 												<div class="input-group-meta form-group mb-30">
 													<label>Email*</label>
-													<input class="email" type="email" placeholder="abc@gmail.com" name="email" required="required" data-error="Valid email is required.">
+													<input class="email" type="email" placeholder="abc@gmail.com" name="email" required="required" data-error="Valid email is required." required>
 													<div class="help-block with-errors"></div>
 												</div>
 											</div>
