--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -263,7 +263,7 @@
 							<div class="col-lg-6 d-flex order-lg-last">
 								<div class="form-style-one">
 									<h3 id="msgSent" class="form-title pb-40 lg-pb-20">Send Message.</h3>
-									<form action="js/contact.js" id="contact-form" data-toggle="validator" novalidate="true">
+									<form name="myForm" action="js/contact.js" id="contact-form" data-toggle="validator" novalidate="true">
 										<div class="messages"></div>
 										<div class="row controls">
 											<div class="col-12">
