--- a/_layouts/team.html
+++ b/_layouts/team.html
@@ -214,7 +214,7 @@
 				<div class="container">
 					<h2 class="intro-title text-center">Our Team</h2>
 					<ul class="page-breadcrumb style-none d-flex justify-content-center">
-						<li><a href="index-main.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li class="current-page">Team</li>
 					</ul>
                     <img src="images/shape/shape_38.svg" alt="" class="shapes shape-one">
