--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -213,7 +213,7 @@
 				<div class="container">
 					<h2 class="intro-title text-center">Contact Us</h2>
 					<ul class="page-breadcrumb style-none d-flex justify-content-center">
-						<li><a href="index-main.html">Home</a></li>
+						<li><a href="index.html">Home</a></li>
 						<li class="current-page">Contact</li>
 					</ul>
 					<img src="images/shape/shape_38.svg" alt="" class="shapes shape-one">
