--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -347,11 +347,11 @@
 									</div> <!-- /.title-style-four -->
 								</div>
 								<div class="col-md-6">
-									
+									<div class="subscribe-form">
 										<form action="#">
 											<input type="email" placeholder="Enter your email">
 											<button class="ripple-btn tran3s">Subscribe</button>
-										</form> 
+										</form>
 										<p>We only send interesting and relevant emails.</p>
 									</div> <!-- /.subscribe-form -->
 								</div>
