--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -348,9 +348,12 @@
 								</div>
 								<div class="col-md-6">
 									<div class="subscribe-form">
-										<form action="#">
-											<input type="email" placeholder="Enter your email">
-											<button class="ripple-btn tran3s">Subscribe</button>
+										<form action="https://gmail.us21.list-manage.com/subscribe/post?u=fff0ff2bf9bed560697c04265&amp;id=03c9a2fdd7&amp;f_id=004ec7e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
+											
+<!-- 											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required> -->
+											<input type="email"  value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email" required>
+<!-- 											<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> -->
+											<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="ripple-btn tran3s">Subscribe</button>
 										</form>
 										<p>We only send interesting and relevant emails.</p>
 									</div> <!-- /.subscribe-form -->
@@ -443,6 +446,9 @@
 		<script src="js/theme.js"></script>
     		<script src="https://cdnjs.cloudflare.com/ajax/libs/firebase/7.14.1-0/firebase.js"></script>
 		<script src="js/contact.js"></script>
+		<script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+		<script type='text/javascript'>(function($) {window.fnames = new Array(); window.ftypes = new Array();fnames[0]='EMAIL';ftypes[0]='email';fnames[1]='FNAME';ftypes[1]='text';fnames[2]='LNAME';ftypes[2]='text';fnames[3]='ADDRESS';ftypes[3]='address';fnames[4]='PHONE';ftypes[4]='phone';fnames[5]='BIRTHDAY';ftypes[5]='birthday';}(jQuery));var $mcj = jQuery.noConflict(true);</script>
+
 
 
 
