--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -353,8 +353,14 @@
 <!-- 											<input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL" required> -->
 											<input type="email"  value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email" required>
 <!-- 											<input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"> -->
-											<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="ripple-btn tran3s">Subscribe</button>
+											<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="ripple-btn tran3s clear foot">Subscribe</button>
 										</form>
+										
+											<div id="mce-responses" class="clear foot">
+											<div class="response" id="mce-error-response" style="display:none"></div>
+											<div class="response" id="mce-success-response" style="display:none"></div>
+											</div> 
+										
 										<p>We only send interesting and relevant emails.</p>
 									</div> <!-- /.subscribe-form -->
 								</div>
