--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -996,10 +996,16 @@
 								<div class="newsletter ps-xl-5">
 									<h5 class="footer-title">Subscribe </h5>
 									<p>Join Our News Letter</p>
-									<form action="#">
-										<input type="email" placeholder="Enter your email">
-										<button>Sign Up</button>
+									<form action="https://gmail.us21.list-manage.com/subscribe/post?u=fff0ff2bf9bed560697c04265&amp;id=03c9a2fdd7&amp;f_id=004ec7e1f0" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form">
+										
+									<input type="email"  value="" name="EMAIL" class="required email" id="mce-EMAIL" placeholder="Enter your email" required>
+									<button type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="ripple-btn tran3s clear foot">Subscribe</button>
 									</form>
+										
+									<div id="mce-responses" class="clear foot">
+									<div class="response" id="mce-error-response" style="display:none"></div>
+									<div class="response" id="mce-success-response" style="display:none"></div>
+									</div> 
 									<div class="info">We only send interesting and relevant emails.</div>
 								</div> <!-- /.newsletter -->
 							</div>
