--- a/_layouts/contact.html
+++ b/_layouts/contact.html
@@ -358,7 +358,7 @@
 										
 											<div id="mce-responses" class="clear foot">
 											<div class="response" id="mce-error-response" style="display:none"></div>
-											<div class="response" id="mce-success-response_contact" style="display:none"></div>
+											<div class="response contact_" id="mce-success-response" style="display:none"></div>
 											</div> 
 										
 										<p>We only send interesting and relevant emails.</p>
