--- a/_layouts/empowerment.html
+++ b/_layouts/empowerment.html
@@ -37,6 +37,15 @@
 			<script src="vendor/html5shiv.js"></script>
 			<script src="vendor/respond.js"></script>
 		<![endif]-->	
+		 <!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-E8NZHEV3WL"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'G-E8NZHEV3WL');
+		</script>
 	</head>
 
 	<body>
