--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -128,7 +128,9 @@
 						 	</button>
 						    <div class="collapse navbar-collapse" id="navbarNav">
 						    	<ul class="navbar-nav">
-						    		<li class="d-block d-lg-none"><div class="logo"><a href="index.html"><img src="images/logo/logo_01.png" alt="" width="130"></a></div></li>
+						    		<li class="d-block d-lg-none"><div class="logo">
+<!-- 									<a href="index.html"><img src="images/logo/logo_01.png" alt="" width="130"></a> -->
+									</div></li>
 							        <li class="nav-item dropdown active">
 							        	<a id ="nav_text_color_main_page" class="nav-link dropdown-toggle active" href="index.html" role="button">Home</a>
 							        	<ul class="dropdown-menu">
