--- a/css/white.css
+++ b/css/white.css
@@ -317,3 +317,19 @@ html {
 .contact_{
  color:black !important; 
 }
+
+#researh_link{
+    position: relative;
+    padding: 20px 25px 20px 95px;
+    font-size: 18px;
+    line-height: 29px;
+    color: #0b3c6a;
+    margin-top: 30px;
+    background: white !important;
+    box-shadow: -20px 20px 50px rgb(0 19 120 / 3%);
+    border-radius: 10px;
+}
+
+
+
+
