--- a/_layouts/areas_of_research.html
+++ b/_layouts/areas_of_research.html
@@ -238,7 +238,7 @@
 			-->
 			<div class="fancy-feature-nine mt-190 lg-mt-100">
 				<div class="container">
-					<li data-aos="fade-up" id="researh_link" class="aos-init aos-animate"> Our approach considers robustness and fairness as essential components of AI solutions.</li>
+					<li data-aos="fade-up" class="research_links"> Our approach considers robustness and fairness as essential components of AI solutions.</li>
 					<div class="row">
 						<div style="margin:auto;" class="col-xxl-5 col-lg-6 ms-auto order-lg-last">
 							<div class="block-style-two md-mb-50" data-aos="fade-left">
