--- a/css/white.css
+++ b/css/white.css
@@ -318,7 +318,7 @@ html {
  color:black !important; 
 }
 
-#researh_link{
+.research_links{
 text-align:center;
 font-size: 18px;
 line-height: 29px;
