--- a/css/white.css
+++ b/css/white.css
@@ -327,6 +327,7 @@ html {
   background: white !important;
   box-shadow: -20px 20px 50px rgb(0 19 120 / 3%);
   border-radius: 10px;
+  padding: 20px 20px 20px 20px;
 }
 
 
