--- a/css/white.css
+++ b/css/white.css
@@ -323,11 +323,12 @@ html {
   font-size: 18px;
   line-height: 29px;
   color: #0b3c6a;
-  margin-top: 30px;
+  margin-bottom: 20px;
   background: white !important;
   box-shadow: -20px 20px 50px rgb(0 19 120 / 3%);
   border-radius: 10px;
   padding: 20px 20px 20px 20px;
+  list:none;
 }
 
 
