--- a/css/white.css
+++ b/css/white.css
@@ -328,7 +328,7 @@ html {
   box-shadow: -20px 20px 50px rgb(0 19 120 / 3%);
   border-radius: 10px;
   padding: 20px 20px 20px 20px;
-  list:none;
+  list-style:none;
 }
 
 
