--- a/_layouts/areas_of_research.html
+++ b/_layouts/areas_of_research.html
@@ -238,7 +238,9 @@
 			-->
 			<div class="fancy-feature-nine mt-190 lg-mt-100">
 				<div class="container">
-					<li class="research_links">In this section, we describe the areas of research on which we focus.<p href="https://www.researchgate.net/lab/Human-AI-Empowerment-Lab-Carlos-Toxtli"> You can find the list of publications in this link.</p></li>
+					<div class="research_links">In this section, we describe the areas of research on which we focus.
+					<div <a href="https://www.researchgate.net/lab/Human-AI-Empowerment-Lab-Carlos-Toxtli"></a> style="display: inline;"> You can find the list of publications in this link.</div>
+					</div>
 					
 					<div class="row">
 						<div style="margin:auto;" class="col-xxl-5 col-lg-6 ms-auto order-lg-last">
