--- a/_layouts/areas_of_research.html
+++ b/_layouts/areas_of_research.html
@@ -238,8 +238,7 @@
 			-->
 			<div class="fancy-feature-nine mt-190 lg-mt-100">
 				<div class="container">
-					<div class="research_links">In this section, we describe the areas of research on which we focus.
-					<div <a href="https://www.researchgate.net/lab/Human-AI-Empowerment-Lab-Carlos-Toxtli"></a> style="display: inline;"> You can find the list of publications in this link.</div>
+					<div class="research_links">In this section, we describe the areas of research on which we focus.<div <a href="https://www.researchgate.net/lab/Human-AI-Empowerment-Lab-Carlos-Toxtli"></a> style="display: inline;"> You can find the list of publications in this link.</div>
 					</div>
 					
 					<div class="row">
