--- a/_layouts/areas_of_research.html
+++ b/_layouts/areas_of_research.html
@@ -238,8 +238,8 @@
 			-->
 			<div class="fancy-feature-nine mt-190 lg-mt-100">
 				<div class="container">
-					<div class="research_links">In this section, we describe the areas of research on which we focus.</div>
-					<div style="display:inline;> <a href="https://www.researchgate.net/lab/Human-AI-Empowerment-Lab-Carlos-Toxtli"></a> You can find the list of publications in this link.</div>
+					<div class="research_links">In this section, we describe the areas of research on which we focus.<a href="https://www.researchgate.net/lab/Human-AI-Empowerment-Lab-Carlos-Toxtli"> You can find the list of publications in this link.</a></div>
+					
 					
 					<div class="row">
 						<div style="margin:auto;" class="col-xxl-5 col-lg-6 ms-auto order-lg-last">
