--- a/_layouts/areas_of_research.html
+++ b/_layouts/areas_of_research.html
@@ -238,7 +238,7 @@
 			-->
 			<div class="fancy-feature-nine mt-190 lg-mt-100">
 				<div class="container">
-					<div class="research_links">In this section, we describe the areas of research on which we focus.<a style="text-decoration:underline; font-weight: bold;" href="https://www.researchgate.net/lab/Human-AI-Empowerment-Lab-Carlos-Toxtli"> You can find the list of publications in this link.</a></div>
+					<div class="research_links">{{ page.research_link[0].text }}<a style="text-decoration:underline; font-weight: bold;" href="{{ page.research_link[0].link }}">{{ page.research_link[0].link_text }}</a></div>
 					
 					
 					<div class="row">
