--- a/_layouts/areas_of_research.html
+++ b/_layouts/areas_of_research.html
@@ -238,7 +238,7 @@
 			-->
 			<div class="fancy-feature-nine mt-190 lg-mt-100">
 				<div class="container">
-					<div class="research_links">{{ page.research_link[0].text }}<a style="text-decoration:underline; font-weight: bold;" href="{{ page.research_link[0].link }}">{{ page.research_link[0].link_text }} target="_blank" rel="noopener noreferrer" </a></div>
+					<div class="research_links">{{ page.research_link[0].text }}<a style="text-decoration:underline; font-weight: bold;" href="{{ page.research_link[0].link }}" target="_blank" rel="noopener noreferrer" >{{ page.research_link[0].link_text }}  </a></div>
 					
 					
 					<div class="row">
